--- a/src/docs/mainpage.dox
+++ b/src/docs/mainpage.dox
@@ -17,5 +17,7 @@ The main internal structure of a simulation works like this:
     Documentation on compiling can be found in \ref compiling_page
 
     Documentation on running LILAC can be found in \ref running_lilac
+
+    Documentation on Nersc scripts can be found in \ref nersc_lilac
 */
 
